app/styles/style.css
@import "./globals.css";
@import "./variables.css";

* {
  font-family: var(--font-primary);
}

main {
  min-height: 100vh;
}

.container-cols {
  display: grid;
  grid-template-columns: 1fr auto;
}

.logo {
  /* margin: 1rem; */
  display: inline-block;
  position: fixed;
  top: 2rem;
  left: 2rem;
}

.container__text-content {
  padding: 2rem 7rem;
}

.container__text-content {
  background-image: url("../assets/images/bg-pattern-desktop.svg"),
    var(--gradient-one);
}

/* heading */
.heading {
  text-transform: uppercase;
  margin-block: 2rem 0;
  margin-top: 4rem;
  font-size: var(--step-5);
  letter-spacing: 2px;
  font-weight: var(--fw-light);
  color: var(--primary-desaturated-red);
}

.text-bold {
  font-weight: var(--fw-semibold);
  display: block;
  color: var(--neutral-dark-grayish-red);
}

.text {
  font-size: var(--step-0);
  color: var(--primary-desaturated-red);
}

/* .container__image-content {
  display: flex;
  justify-content: center;
  align-items: center;
} */

.hero__image {
  /* object-fit: cover; */
  max-width: 100%;
  max-height: 100vh;
}

.form {
  margin-top: 1rem;
}

.form__flex {
  display: flex;
  justify-content: start;
  align-items: center;
  border: 2px solid var(--primary-desaturated-red);
  max-width: fit-content;
  border-radius: 5rem;
  padding: 0.5rem 1rem;
  gap: 2rem;
  transition: 150ms ease;
}

.form__input-error {
  border-color: var(--primary-soft-red);
}

.form__label {
  font-size: var(--step-0);
  color: var(--neutral-dark-grayish-red);
  margin-bottom: 0.5rem;
  display: inline-block;
}

.form__input {
  border: none;
  font-size: var(--step-0);
  background: transparent;
  border-radius: 5rem;
  padding: 0.75rem 1.5rem;
}

.emailError {
  display: none;
}

.emailError__icon {
  width: 2.5rem;
}

.form__input:focus {
  outline: 2px dotted var(--neutral-dark-grayish-red);
}

.form__submit {
  padding: 1.25rem 3rem;
  border-radius: 5rem;
  border: none;
  cursor: pointer;
  background: var(--gradient-two);
  display: block;
  box-shadow: 0.35rem 0.35rem 0.5rem rgba(0, 0, 0, 0.15);
  transition: 0.2s ease;
}

.form__submit img {
  display: block;
}

.form__submit:hover {
  opacity: 0.75;
  box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.25);
}

.errorMessage {
  margin-top: 0.5rem;
  display: none;
  font-size: var(--step--1);
  color: var(--primary-soft-red);
}

@media (width < 50rem) {
  .container-cols {
    grid-template-columns: 1fr;
  }

  .container__text-content {
    padding: 1rem;
  }

  .heading,
  .text {
    text-align: center;
  }

  .heading {
    font-size: var(--step-4);
  }

  .container__text-content {
    order: 2;
  }

  .form__flex {
    padding: 0.25rem;
    gap: 0.5rem;
  }

  .form__submit {
    padding: 1rem 1.5rem;
  }

  .form__input {
    padding: 0.5rem;
    max-width: 100%;
    font-size: var(--step-0);
    display: inline-block;
  }

  .emailError__icon {
    max-width: 1.5rem;
  }

  .logo {
    position: relative;
    top: 0;
    left: 0;
    margin: 1rem;
  }

  .hero__image {
    max-height: auto;
  }

  .form__submit img {
    max-width: 0.5rem;
  }
}

